fixed text overflow

--- a/client/src/components/Task/Task.css
+++ b/client/src/components/Task/Task.css
@@ -15,6 +15,14 @@
   background-color: #f9f9f9;
 }
 
+.task-saved h5,
+.task-saved p {
+  max-width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .form-control {
   margin-bottom: 10px;
 }
